--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@
                 </div>
                 <button class="btn btn-primary" onclick="startQuiz()">Start Quiz</button>
             </div>
+            <p> diUlay by Akbar :D</p>
+            
         </div>
 
         <!-- Quiz Screen -->
