--- a/index.html
+++ b/index.html
@@ -435,6 +435,40 @@
                 gap: 15px;
             }
         }
+
+        /* Footer / Credit */
+        .footer-credit {
+            text-align: center;
+            margin-top: 20px;
+            padding: 15px;
+        }
+
+        .footer-credit p {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.9rem;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+        }
+
+        .footer-credit .heart {
+            display: inline-block;
+            color: #ff6b6b;
+            animation: pulse 1.5s ease infinite;
+        }
+
+        .footer-credit .update-note {
+            display: block;
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 1.05rem;
+            font-weight: 700;
+            margin-top: 6px;
+            letter-spacing: 0.3px;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+        }
     </style>
 </head>
 <body>
@@ -461,7 +495,10 @@
                 </div>
                 <button class="btn btn-primary" onclick="startQuiz()">Start Quiz</button>
             </div>
-            <p> diUlay by Akbar :D</p>
+            <div class="footer-credit">
+                <p>Made with algampiran by Akbar :D</p>
+                <span class="update-note">Updated Weekly</span>
+            </div>
             
         </div>
 
